k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: streamlit-prod
spec:
  type: ClusterIP
  selector:
    app: streamlit
  ports:
    - port: 80
      targetPort: 8501
